azure-deployment/k8s/flink-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flink
  labels:
    app.kubernetes.io/managed-by: flink-operator
