azure-deployment/k8s/flink-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flink-ui
  namespace: flink-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
  - host: flink.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: basic-session-cluster-rest
            port:
              number: 8081
